--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li class="button">B</li>
             <li class="button">C</li>
             <li class="button">D</li>
+            <li class="button">E</li>
         </ul>
     </div>
     <script src="app.js"></script>
