--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <h1>Monster Tamagochi</h1>
-        <p>Here be buttons</p>
+        <p class="statsdisplay">Here be buttons</p>
         <ul class="buttonbox">
             <li class="button">A</li>
             <li class="button">B</li>
