Counter for food

--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Food Timer</title>
 </head>
 <body>
-    <h1 id="headerTimer">Time Counter</h1>
-    <p id="tCounter">0</p>
-    <h2 id="Food">Food left:</h2>
-    <h3 id="foodCount">0</h3>
+    <div>
+        <h1>Food: <span id="food-count">100</span></h1>
+        <h2>Timer: <span id="timer-display">10</span> seconds</h2>
+    </div>
 </body>
 <script src="./Counter.js"></script>
 </html>
