--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
 
     <!-- End Screen - it's joever -->
     <div class="wrapper" id="endscreen">
-        <p>You expected some shit here? Lol at you.</p>
-        <input type="button" class="button" id="restart">
+        <p>Endscreen.</p>
+        <button  id="restart" style="height: 50 px; width: 50px;"> restart </button>
+
     </div>
     </div>
     <script src="app.js"></script>
